Fixed bug with horizontal scrollbar: Removed set body width (100vw)

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html {
 
 body {
     min-height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
     font-family: "Montserrat", sans-serif;
     background: linear-gradient(160deg, #0c1445 -16.9%, rgb(71, 30, 84) 119.9%);
     background-attachment: fixed;
